--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Tables Page</title>
+    <title>Hot Restaurant</title>
 
     <!-- Latest compiled and minified CSS -->
     <link
@@ -31,13 +31,11 @@
           <a href="/tables"
             ><button class="btn btn-lg btn-primary">
               <span class="fa fa-list-alt"></span> View Tables
-            </button></a
-          >
+            </button></a>
           <a href="/reserve"
             ><button class="btn btn-lg btn-danger">
               <span class="fa fa-credit-card"></span> Make Reservation
-            </button></a
-          >
+            </button></a>
         </div>
       </div>
 
