--- a/home.html
+++ b/home.html
@@ -28,11 +28,11 @@
         <br />
 
         <div class="text-center">
-          <a href="/tables"
+          <a href="/table.html"
             ><button class="btn btn-lg btn-primary">
               <span class="fa fa-list-alt"></span> View Tables
             </button></a>
-          <a href="/reserve"
+          <a href="/reserve.html"
             ><button class="btn btn-lg btn-danger">
               <span class="fa fa-credit-card"></span> Make Reservation
             </button></a>
