--- a/table.html
+++ b/table.html
@@ -26,7 +26,7 @@
         <br>
   
         <div class="text-center">
-          <a href="/reserve"><button class="btn btn-lg btn-danger"><span class="fa fa-credit-card"></span> Make Reservation</button></a>
+          <a href="/reserve.html"><button class="btn btn-lg btn-danger"><span class="fa fa-credit-card"></span> Make Reservation</button></a>
           <a href="/"><button class="btn btn-lg btn-default"><span class="fa fa-home"></span></button></a>
         </div>
       </div>
